# name-randomizer

./: .clangd  .gitignore  CMakeLists.txt  README.md  applicationIcon.rc
include/gui/: mainGui.h
src/: main.cpp
src/gui/: mainGui.cpp
